reports/docs/04/conditional_branch.err.log
Traceback (most recent call last):
  File "/Users/aizawa/opt/anaconda3/envs/ml-py39/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/aizawa/opt/anaconda3/envs/ml-py39/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/aizawa/opt/anaconda3/envs/ml-py39/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/aizawa/opt/anaconda3/envs/ml-py39/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/aizawa/opt/anaconda3/envs/ml-py39/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/Users/aizawa/opt/anaconda3/envs/ml-py39/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/aizawa/opt/anaconda3/envs/ml-py39/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/aizawa/opt/anaconda3/envs/ml-py39/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
a = 3
b = 3
if a == b:
print(f'{a}ã¨{b}ã¯ç­‰ã—ã„ã§ã™ï¼') # ifæ–‡ã®å¾Œã«ã‚¤ãƒ³ãƒ‡ãƒ³ãƒˆã‚’å…¥ã‚Œå¿˜ã‚Œã¦ã„ã‚‹
------------------

[0;36m  File [0;32m"/var/folders/q9/jctgs7sd6p3bdvt7h5jwg12h0000gn/T/ipykernel_88904/4061242926.py"[0;36m, line [0;32m4[0m
[0;31m    print(f'{a}ã¨{b}ã¯ç­‰ã—ã„ã§ã™ï¼') # ifæ–‡ã®å¾Œã«ã‚¤ãƒ³ãƒ‡ãƒ³ãƒˆã‚’å…¥ã‚Œå¿˜ã‚Œã¦ã„ã‚‹[0m
[0m    ^[0m
[0;31mIndentationError[0m[0;31m:[0m expected an indented block

IndentationError: expected an indented block (4061242926.py, line 4)

